--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -84,6 +84,8 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  // transition: 0.3s all ease-in-out;
+
   .cubes-cube {
     height: 35px;
     width: 150px;
@@ -107,5 +109,78 @@
   }
 }
 
+// DISPLAY-SOLVE
+//===============
+.DisplaySolve {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: grid;
+  place-items: center;
+  z-index: 10;
+
+  .displaysolve-content {
+    height: 70vh;
+    width: 40vw;
+    background-color: $secondaryBackgroundColor;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+
+    &-header {
+      height: 5vh;
+      padding: 0px 10%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      &-id-text {
+        margin-left: 15px;
+      }
+    }
+  }
+}
+
 // --component-name--
 //===============
+// &-header {
+//   height: 10vh;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   color: $accentColor;
+//   border-bottom: 2px solid $secondaryColor;
+// }
+// &-body {
+//   height: 30vh;
+//   padding: 3% 10px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+
+//   h3 {
+//     display: flex;
+
+//     .text {
+//       width: 10%;
+//       padding: 0px 5px;
+//       display: flex;
+//       justify-content: space-between;
+//       align-content: center;
+//       color: $primaryColor;
+//     }
+//     .prop {
+//       display: flex;
+//       justify-content: flex-start;
+//       align-content: center;
+//       width: 90%;
+//       color: $secondaryColor;
+//     }
+//   }
+// }
+// &-footer {
+//   height: 10vh;
+// }
