--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -2,6 +2,7 @@
 @import 'Home';
 @import 'Leaderboard';
 @import 'About';
+@import 'settings';
 @import 'User';
 
 // APP
@@ -144,7 +145,7 @@
   }
 }
 
-// ADDSOLVE
+// ADD-SOLVE
 //===============
 .AddSolve {
   position: fixed;
